[gd_scene load_steps=3 format=3 uid="uid://cfwut0cwovhpv"]

[ext_resource type="FontFile" uid="uid://gxmbr3xcsrre" path="res://assets/Deadfall-Regular.ttf" id="1_3jngf"]
[ext_resource type="Script" path="res://options.gd" id="1_w4gm3"]

[node name="Options" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w4gm3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.752941)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.0
offset_top = 64.0
offset_right = 78.0
offset_bottom = 124.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 45
text = "Options"

[node name="Player" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 74.0
offset_top = 69.0
offset_right = 74.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Player" type="Label" parent="Player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -216.0
offset_top = -18.0
offset_right = -144.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 45
text = "Player
"

[node name="PlayerSlider" type="HSlider" parent="Player"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -8.0
offset_right = 147.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.01

[node name="Zombies" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 79.0
offset_top = 153.0
offset_right = 79.0
offset_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Zombies" type="Label" parent="Zombies"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -19.0
offset_right = -119.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 45
text = "Zombies
"

[node name="ZombiesSlider" type="HSlider" parent="Zombies"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -9.0
offset_right = 142.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.01

[node name="Music" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 53.0
offset_top = -13.0
offset_right = 53.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Music" type="Label" parent="Music"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -19.0
offset_right = -119.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 45
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="Music"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -9.0
offset_right = 168.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.01

[node name="Master" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 78.0
offset_top = -97.0
offset_right = 78.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Master" type="Label" parent="Master"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.0
offset_top = -19.0
offset_right = -119.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 45
text = "Master"

[node name="MasterSlider" type="HSlider" parent="Master"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -51.0
offset_top = -9.0
offset_right = 143.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
max_value = 2.0
step = 0.01

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -103.0
offset_right = 74.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_3jngf")
theme_override_font_sizes/font_size = 32
text = "Close"

[connection signal="value_changed" from="Player/PlayerSlider" to="." method="_on_player_slider_changed"]
[connection signal="value_changed" from="Zombies/ZombiesSlider" to="." method="_on_zombie_slider_changed"]
[connection signal="value_changed" from="Music/MusicSlider" to="." method="_on_music_slider_changed"]
[connection signal="value_changed" from="Master/MasterSlider" to="." method="_on_master_slider_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
